--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -87,7 +87,8 @@
                                                                 data-bs-target="#quickViewModal"><i
                                                                     class="fi-rs-eye"></i></a>
                                                             <a aria-label="Add To Wishlist" class="action-btn hover-up"
-                                                                href="#"><i class="fi-rs-heart"></i></a>
+                                                                onclick="addToWishList('<%= products[i]._id %>')"><i
+                                                                    class="fi-rs-heart"></i></a>
                                                             <a aria-label="Compare" class="action-btn hover-up"
                                                                 href="shop-compare.html"><i
                                                                     class="fi-rs-shuffle"></i></a>
@@ -246,7 +247,7 @@
                     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
                     <script>
-                        function addToCart(productId,price) {
+                        function addToCart(productId, price) {
                             // Assuming you want to add 1 quantity by default
                             const quantity = 1;
                             fetch('/cart/addToCart/' + productId, {
@@ -254,7 +255,7 @@
                                 headers: {
                                     'Content-Type': 'application/json',
                                 },
-                                body: JSON.stringify({ productId, quantity ,price}),
+                                body: JSON.stringify({ productId, quantity, price }),
                             })
                                 .then(response => {
                                     if (response.redirected) {
@@ -279,14 +280,95 @@
                                 .then(data => {
                                     if (data.status) {
                                         // Show a success message using SweetAlert2
-                                        Swal.fire({
+                                        const Toast = Swal.mixin({
+                                            toast: true,
+                                            position: "top-end",
+                                            showConfirmButton: false,
+                                            timer: 3000,
+                                            timerProgressBar: true,
+                                            didOpen: (toast) => {
+                                                toast.onmouseenter = Swal.stopTimer;
+                                                toast.onmouseleave = Swal.resumeTimer;
+                                            }
+                                        });
+                                        Toast.fire({
+                                            icon: "success",
                                             title: 'Success!',
-                                            text:  data.message,
-                                            icon: 'success',
-                                            timer: 3000, // 3 seconds
-                                            timerProgressBar: true, // Show a progress bar
-                                            showConfirmButton: false, // Hide the confirm button
-                                        })
+                                            text: data.message,
+                                        });
+                                    } else {
+                                        // Handle errors
+                                        Swal.fire({
+                                            title: 'Error!',
+                                            text: data.message,
+                                            icon: 'error',
+                                        });
+                                    }
+                                })
+                                .catch(err => {
+                                    if (!err.data.success) {
+                                        Swal.fire({
+                                            icon: 'error',
+                                            title: 'Error',
+                                            text: err.response.data.message,
+                                        });
+                                    } else {
+                                        console.error(err);
+                                    }
+                                });
+                        }
+
+                        function addToWishList(productId) {
+
+
+                            fetch('/wishList/addTowishList/' + productId, {
+                                method: 'POST',
+                                headers: {
+                                    'Content-Type': 'application/json',
+                                },
+                                body: JSON.stringify({ productId }),
+                            })
+
+                                .then(response => {
+                                    if (response.redirected) {
+                                        return Swal.fire({
+                                            title: 'Login Required',
+                                            text: 'You must be logged in to add items to your Wishlist.',
+                                            icon: 'warning',
+                                            showCancelButton: true,
+                                            confirmButtonText: 'Login',
+                                            cancelButtonText: 'Cancel',
+                                        }).then((result) => {
+                                            if (result.isConfirmed) {
+                                                window.location.href = '/login';
+                                            } else {
+                                                throw new Error('Action cancelled');
+                                            }
+                                        });
+                                    }
+                                    return response.json();
+                                })
+
+                                .then(data => {
+                                    if (data.status) {
+                                        // Show a success message using SweetAlert2
+                                        const Toast = Swal.mixin({
+                                            toast: true,
+                                            position: "top-end",
+                                            showConfirmButton: false,
+                                            timer: 3000,
+                                            timerProgressBar: true,
+                                            didOpen: (toast) => {
+                                                toast.onmouseenter = Swal.stopTimer;
+                                                toast.onmouseleave = Swal.resumeTimer;
+                                            }
+                                        });
+                                        Toast.fire({
+                                            icon: "success",
+                                            title: 'Success!',
+                                            text: data.message,
+                                        });
+
                                     } else {
                                         // Handle errors
                                         Swal.fire({
