--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -198,106 +198,116 @@
                 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
                 <script>
-                    function removeFromCart(id) {
-                        Swal.fire({
-                            title: 'Are you sure?',
-                            text: "You won't be able to revert this!",
-                            icon: 'warning',
-                            showCancelButton: true,
-                            confirmButtonColor: '#3085d6',
-                            cancelButtonColor: '#d33',
-                            confirmButtonText: 'Yes, delete it!'
-                        }).then((result) => {
-                            if (result.isConfirmed) {
-                                fetch(`/cart/removeFromCart/${id}`, {
-                                    method: 'DELETE',
-                                })
-                                    .then(response => response.json())
-                                    .then(data => {
-                                        if (data.message === 'Cart item removed successfully') {
-                                            Swal.fire({
-                                                title: 'Deleted!',
-                                                text: 'Your item has been removed from the cart.',
-                                                icon: 'success',
-                                                timer: 3000,
-                                                timerProgressBar: true,
-                                                showConfirmButton: false,
-                                            });
-
-                                            location.reload();
-                                        } else {
-                                            Swal.fire(
-                                                'Failed!',
-                                                'Failed to remove item from cart.',
-                                                'error'
-                                            );
-                                        }
-                                    })
-                                    .catch(error => {
-                                        console.error('Error:', error);
-                                        Swal.fire(
-                                            'Failed!',
-                                            'Failed to remove item from cart.',
-                                            'error'
-                                        );
-                                    });
+     function removeFromCart(id) {
+        Swal.fire({
+            title: 'Are you sure?',
+            text: "You won't be able to revert this!",
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Yes, delete it!'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                fetch(`/cart/removeFromCart/${id}`, {
+                    method: 'DELETE',
+                })
+                .then(response => response.json())
+                .then(response => {
+                    if (response.status) {
+                        const Toast = Swal.mixin({
+                            toast: true,
+                            position: "top-end",
+                            showConfirmButton: false,
+                            timer: 3000,
+                            timerProgressBar: true,
+                            didOpen: (toast) => {
+                                toast.onmouseenter = Swal.stopTimer;
+                                toast.onmouseleave = Swal.resumeTimer;
                             }
                         });
-                    }
-
-
-                    function clearCartConfirmation() {
-                        Swal.fire({
-                            title: 'Are you sure?',
-                            text: "You won't be able to revert this!",
-                            icon: 'warning',
-                            showCancelButton: true,
-                            confirmButtonColor: '#3085d6',
-                            cancelButtonColor: '#d33',
-                            confirmButtonText: 'Yes, clear it!'
-                        }).then((result) => {
-                            if (result.isConfirmed) {
-                                fetch('/cart/clear', {
-                                    method: 'DELETE',
-                                    headers: {
-                                        'Content-Type': 'application/json',
-
-                                    },
-                                })
-                                    .then(response => response.json())
-                                    .then(data => {
-                                        if (data.message === 'Cart cleared successfully') {
-                                            Swal.fire(
-                                                {
-                                                    title: 'Cleared!',
-                                                    text: 'Your cart has been cleared.',
-                                                    icon: 'success',
-                                                    timer: 2000,
-                                                    timerProgressBar: true,
-                                                    showConfirmButton: false,
-                                                }
-                                            );
-                                            location.reload();
-                                        } else {
-                                            Swal.fire(
-                                                'Failed!',
-                                                'Failed to clear the cart.',
-                                                'error'
-                                            );
-                                        }
-                                    })
-                                    .catch(error => {
-                                        console.error('Error:', error);
-                                        Swal.fire(
-                                            'Failed!',
-                                            'Failed to clear the cart.',
-                                            'error'
-                                        );
-                                    });
-                            }
+                        Toast.fire({
+                            title: 'Deleted!',
+                            text: 'Your item has been removed from the cart.',
+                            icon: 'success',
                         });
-                    }
 
+                        setTimeout(() => {
+                            location.reload();
+                        }, 3000);
+                    } else {
+                        Swal.fire(
+                            'Failed!',
+                            'Failed to remove item from cart.',
+                            'error'
+                        );
+                    }
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    Swal.fire(
+                        'Failed!',
+                        'Failed to remove item from cart.',
+                        'error'
+                    );
+                });
+            }
+        });
+    }
+
+
+    function clearCartConfirmation() {
+        Swal.fire({
+            title: 'Are you sure?',
+            text: "You won't be able to revert this!",
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Yes, clear it!'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                fetch('/cart/clear', {
+                    method: 'DELETE',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.status) {
+                        Swal.fire(
+                            {
+                                title: 'Cleared!',
+                                text: 'Your cart has been cleared.',
+                                icon: 'success',
+                                timer: 3000,
+                                timerProgressBar: true,
+                                showConfirmButton: false,
+                            }
+                        );
+                        setTimeout(() => {
+                            location.reload();
+                        }, 3000);
+                    } else {
+                        Swal.fire(
+                            'Failed!',
+                            'Failed to clear the cart.',
+                            'error'
+                        );
+                    }
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    Swal.fire(
+                        'Failed!',
+                        'Failed to clear the cart.',
+                        'error'
+                    );
+                });
+            }
+        });
+    }
 
                     function incrementQuantity(itemId) {
                         const currentQuantityElement = document.querySelector(`span[data-item-id="${itemId}"]`);
