--- a/views/user/wishList.ejs
+++ b/views/user/wishList.ejs
@@ -1,74 +1,139 @@
 <%- include('../layouts/header.ejs') %>
-<%- include('../layouts/navbar.ejs') %>
+    <%- include('../layouts/navbar.ejs') %>
 
-<main class="main">
-  <div class="page-header breadcrumb-wrap">
-      <div class="container">
-          <div class="breadcrumb">
-              <a href="/" rel="nofollow">Home</a>
-              <span></span> Wishlist
-          </div>
-      </div>
-  </div>
-  <section class="mt-50 mb-50">
-      <div class="container">
-          <div class="row">
-              <div class="col-12">
-                <% if (!req.session.user_id) { %>
-                    <!-- Show message to login -->
-                    <div class="alert alert-warning" role="alert">
-                        Please <a href="/login">login</a> to view your wishlist.
+        <main class="main">
+            <div class="page-header breadcrumb-wrap">
+                <div class="container">
+                    <div class="breadcrumb">
+                        <a href="/" rel="nofollow">Home</a>
+                        <span></span> Wishlist
                     </div>
-                    <% } else if (wishlist.length===0) { %>
-                        <div class="alert alert-info" role="alert">
-                            hai buddy Your wishlist is empty. Please add some items to wishlist .
+                </div>
+            </div>
+            <section class="mt-50 mb-50">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <% if (!req.session.user_id) { %>
+                                <!-- Show message to login -->
+                                <div class="alert alert-warning" role="alert">
+                                    Please <a href="/login">login</a> to view your wishlist.
+                                </div>
+                                <% } else if (wishlist.length===0) { %>
+                                    <div class="alert alert-info" role="alert">
+                                        hai buddy Your wishlist is empty. Please add some items to wishlist .
+                                    </div>
+                                    <% } else { %>
+                                        <div class="table-responsive">
+                                            <table class="table shopping-summery text-center">
+                                                <thead>
+                                                    <tr class="main-heading">
+                                                        <th scope="col" colspan="2">Product</th>
+                                                        <th scope="col">Price</th>
+                                                        <th scope="col">Stock Status</th>
+                                                        <th scope="col">Remove</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <% wishlist.forEach(items=> { %>
+
+                                                        <tr>
+                                                            <td class="image product-thumbnail">
+                                                                <a href="/productdetails/<%= items.productId._id %>">
+                                                                    <img src="/uploads/product/resized/<%= items.productId.productImage[0] %>" alt="#">
+                                                                </a>
+                                                            </td>
+                                                            <td class="product-des product-name">
+                                                                <a href="/productdetails/<%= items.productId._id %>">
+                                                                    <h5 class="product-name"><%= items.productId.name %></h5>
+                                                                </a>
+                                                            </td>
+                                                            <td class="price" data-title="Price"><span>₹<%=
+                                                                        items.productId.price%></span></td>
+                                                            <% if (!items.productId.stockCount<=0) { %>
+                                                                <td class="text-center" data-title="Stock">
+                                                                    <span class="color3 font-weight-bold">In
+                                                                        Stock</span>
+                                                                </td>
+
+                                                                <% } else { %>
+                                                                    <td class="text-center" data-title="Stock">
+                                                                        <span class="font-weight-bold"
+                                                                            style="color: red;">Out Of Stock</span>
+                                                                    </td>
+
+                                                                    <% } %>
+
+
+                                                                        <td class="action" data-title="Remove">
+                                                                            <a href="#"
+                                                                            onclick="removeFromCart('<%= items.productId._id %>')"
+                                                                             ><i class="fi-rs-trash"></i></a>
+                                                                        </td>
+                                                        </tr>
+                                                        <% }); %>
+                                                </tbody>
+                                            </table>
+                                        </div>
                         </div>
-                        <% } else { %>
-                  <div class="table-responsive">
-                      <table class="table shopping-summery text-center">
-                          <thead>
-                              <tr class="main-heading">
-                                  <th scope="col" colspan="2">Product</th>
-                                  <th scope="col">Price</th>
-                                  <th scope="col">Stock Status</th>
-                                  <th scope="col">Action</th>
-                                  <th scope="col">Remove</th>
-                              </tr>
-                          </thead>
-                          <tbody>
-                            <% wishlist.forEach(item=> { %>
+                        <% } %>
 
-                              <tr>
-                                
-                                  <td class="image product-thumbnail"> <img src="/uploads/product/resized/<%=item.productId.productImage[0] %>"
-                                    alt="#"></td>
-                                  <td class="product-des product-name">
-                                      <h5 class="product-name">  <%= item.productId.name %></h5>
-                                      <!-- <p class="font-xs">Maboriosam in a tonto nesciung eget<br> distingy magndapibus.
-                                      </p> -->
-                                  </td>
-                                  <td class="price" data-title="Price"><span>₹<%=
-                                    item.productId.price%></span></td>
-                                  <td class="text-center" data-title="Stock">
-                                      <span class="color3 font-weight-bold">In Stock</span>
-                                  </td>
-                                  <td class="text-right" data-title="Cart">
-                                      <button class="btn btn-sm"><i class="fi-rs-shopping-bag mr-5"></i>Add to cart</button>
-                                  </td>
-                                  <td class="action" data-title="Remove"><a href="#"><i class="fi-rs-trash"></i></a></td>
-                              </tr>
-                              <% }); %>
-                          </tbody>
-                      </table>
-                  </div>
-              </div>
-              <% } %>
+                    </div>
+                </div>
+            </section>
+        </main>
 
-          </div>
-      </div>
-  </section>
-</main>
+        <%- include('../layouts/footer.ejs') %>
+            <%- include('../layouts/preloader.ejs') %>
+                <%- include('../layouts/script.ejs') %>
 
-<%- include('../layouts/footer.ejs') %>
-<%- include('../layouts/preloader.ejs') %>
-<%- include('../layouts/script.ejs') %>
+                <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+                    <script>
+                              function removeFromCart(id) {
+                        Swal.fire({
+                            title: 'Are you sure?',
+                            text: "You won't be able to revert this!",
+                            icon: 'warning',
+                            showCancelButton: true,
+                            confirmButtonColor: '#3085d6',
+                            cancelButtonColor: '#d33',
+                            confirmButtonText: 'Yes, delete it!'
+                        }).then((result) => {
+                            if (result.isConfirmed) {
+                                fetch(`/wishList/removeFromWishList/${id}`, {
+                                    method: 'DELETE',
+                                })
+                                    .then(response => response.json())
+                                    .then(data => {
+                                        if (data.message === 'Cart item removed successfully') {
+                                            Swal.fire({
+                                                title: 'Deleted!',
+                                                text: 'Your item has been removed from the cart.',
+                                                icon: 'success',
+                                                timer: 3000,
+                                                timerProgressBar: true,
+                                                showConfirmButton: false,
+                                            });
+
+                                            location.reload();
+                                        } else {
+                                            Swal.fire(
+                                                'Failed!',
+                                                'Failed to remove item from cart.',
+                                                'error'
+                                            );
+                                        }
+                                    })
+                                    .catch(error => {
+                                        console.error('Error:', error);
+                                        Swal.fire(
+                                            'Failed!',
+                                            'Failed to remove item from cart.',
+                                            'error'
+                                        );
+                                    });
+                            }
+                        });
+                    }
+ 
+                        </script>
